--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,6 +12,6 @@ jobs:
         with:
           who-to-greet: Jonathan
       - name: Log Greeting Time
-        run: "${{ steps.greet.outputs.time }}"
+        run: echo "${{ steps.greet.outputs.time }}"
         
       
