--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,6 +8,24 @@ jobs:
     permissions:
       issues: write 
     steps:
+      - name: Push a random file
+        run: |
+          pwd
+          ls -a
+          git init
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+          git config --global user.email "jcastellscan@gmail.com"
+          git config --global user.name "jcastellscan"
+          git fetch
+          git checkout master
+          git branch --set-upstream-to=origin/master
+          git pull
+          ls -a
+          echo $RANDOM >> radom.txt
+          ls -a
+          git add -a
+          git commit -m"Random file"
+          git push
       - name: Create issue using REST API
         run: |
           curl --request POST \
