--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -23,7 +23,7 @@ jobs:
           ls -a
           echo $RANDOM >> radom.txt
           ls -a
-          git add -a
+          git add -A
           git commit -m"Random file"
           git push
       - name: Create issue using REST API
