--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -18,13 +18,19 @@ jobs:
           git config --global user.name "jcastellscan"
           git fetch
           git checkout master
+          echo AAAAAAAA
           git branch --set-upstream-to=origin/master
+          echo BBBBBBBBBBB
           git pull
+          echo CCCCCCCCCCC
           ls -a
           echo $RANDOM >> radom.txt
           ls -a
+          echo DDDDDDDDDDD
           git add -A
+          echo EEEEEEEEEEEE
           git commit -m"Random file"
+          echo FFFFFFFFFFF
           git push
       - name: Create issue using REST API
         run: |
