--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,32 +5,25 @@ env:
 jobs:
   create_issue:
     runs-on: ubuntu-latest 
-    permissions:
-      issues: write 
     steps:
       - name: Push a random file
         run: |
           pwd
           ls -a
           git init
-          git remote add origin "https://$GITHUB_ACTOR:${{ github.token }}@github.com/$GITHUB_REPOSITORY.git"
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git config --global user.email "jcastellscan@gmail.com"
           git config --global user.name "jcastellscan"
           git fetch
           git checkout master
-          echo AAAAAAAA
           git branch --set-upstream-to=origin/master
-          echo BBBBBBBBBBB
           git pull
-          echo CCCCCCCCCCC
           ls -a
           echo $RANDOM >> radom.txt
           ls -a
           echo DDDDDDDDDDD
           git add -A
-          echo EEEEEEEEEEEE
           git commit -m"Random file"
-          echo FFFFFFFFFFF
           git push
       - name: Create issue using REST API
         run: |
