--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -19,7 +19,7 @@ jobs:
           git branch --set-upstream-to=origin/master
           git pull
           ls -a
-          echo $RANDOM >> radom.txt
+          echo $RANDOM >> random.txt
           ls -a
           git add -A
           git commit -m"Random file"
